@@ -4,7 +4,7 @@ Feature: List Backups for a Site
     @vcr site_backups_list
     Given I am authenticated
     And a site named "[[test_site_name]]"
-    When I run "terminus site backup list --site=behat-test --env=dev"
+    When I run "terminus site backups list --site=behat-test --env=dev"
     Then I should get:
     """
     code.tar.gz
@@ -14,7 +14,7 @@ Feature: List Backups for a Site
     @vcr site_backups_list
     Given I am authenticated
     And a site named "[[test_site_name]]"
-    When I run "terminus site backup list --site=behat-test --env=dev --element=db"
+    When I run "terminus site backups list --site=behat-test --env=dev --element=db"
     Then I should get:
     """
     database.sql.gz
